--- a/asstes/styles/index.css
+++ b/asstes/styles/index.css
@@ -13,7 +13,7 @@
   --menue-size: 18px;
   --menue-height: 40px;
   --new-collection-weight: 700;
-  --mobile-padding: 15px
+  --mobile-padding: 15px;
 }
 
 * {
@@ -69,7 +69,6 @@ body {
 .header .nav ul li a {
   text-decoration: none;
   margin-right: 32px;
-
 }
 
 .header .nav ul li .menu {
@@ -95,7 +94,6 @@ body {
   font-weight: var(--year-weight);
   line-height: var(--one-hundred-percent);
   color: var(--year-color);
-
 }
 
 .hero .left h2 {
@@ -128,10 +126,8 @@ body {
   color: var(--black-color);
 }
 
-
 .hero .right {
   flex-grow: 1;
-  /* background-color: aquamarine; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -144,44 +140,68 @@ body {
   margin: 0;
 }
 
-/* .gray-bullet {
+.hero .right .inside {
+  flex-grow: 1;
+  text-align: center;
+  position: relative;
+  /* background-color: red; */
+}
+
+.hero .right .inside input {
+  display: none;
+}
+
+.hero .right .inside label {
   margin-bottom: 21px;
   width: 16px;
   height: 16px;
   border-radius: 50%;
   background-color: var(--gray-color2);
-} */
+  position: absolute;
+  z-index: 8 ;
+}
 
-.hero #change1:checked~.first,
-.hero #change2:checked~.second,
-.hero #change3:checked~.third {
+.hero .right .inside .first {
+  right: 0;
+  top: 45%;
+}
+
+.hero .right .inside .second {
+  right: 0;
+  top: 50%;
+}
+
+.hero .right .inside .third {
+  right: 0;
+  top: 55%;
+}
+
+.hero .right .inside #change1:checked ~ .first,
+.hero .right .inside #change2:checked ~ .second,
+.hero .right .inside #change3:checked ~ .third {
   border-radius: 50%;
   background-color: var(--white-color);
   transform: scale(1.2);
 }
 
-.hero .white-bullet {
-  margin-bottom: 21px;
-  width: 21px;
-  height: 21px;
-  border-radius: 50%;
-  background-color: var(--white-color);
-  cursor: pointer;
-}
-
-.hero .gray-bullet {
-  margin-bottom: 21px;
-  width: 16px;
-  height: 16px;
-  border-radius: 50%;
-  background-color: var(--gray-color2);
-}
-
-
-.hero .right .inside {
-  flex-grow: 1;
-  text-align: center;
+.hero .right .inside .man,
+.hero .right .inside .menjacket,
+.hero .right .inside .mensunglasses {
   position: relative;
+  display: none;
+  left: 28%;
+}
+
+.hero .right .inside #change1:checked ~ picture .man {
+  display: block;
+}
+
+.hero .right .inside #change2:checked ~ picture .menjacket {
+  display: block;
+}
+
+.hero .right .inside #change3:checked ~ picture .mensunglasses {
+  display: block;
 }
 
 .hero .right .inside p {
@@ -229,11 +249,6 @@ body {
   z-index: 0;
 }
 
-.hero .right .inside .man {
-  /* vertical-align: bottom; */
-  position: relative;
-}
-
 .hero .right .inside .arrow-left {
   position: absolute;
   bottom: 32px;
@@ -246,7 +261,6 @@ body {
   left: 203px;
   transform: rotate(180deg);
 }
-
 
 .brands {
   background-color: rgba(24, 24, 24, 1);
@@ -270,8 +284,6 @@ body {
   font-weight: var(--h3-weight);
   color: var(--black-color2);
 }
-
-
 
 .new-collection .collection p {
   font-weight: var(--new-collection-weight);
@@ -322,7 +334,6 @@ body {
   border-radius: 24px;
 }
 
-
 .new-collection .collection .sunglasses .off {
   padding-bottom: 247px;
   --off-size: 48px;
@@ -363,20 +374,19 @@ body {
   padding: 16px;
 }
 
-input {
+.product-wrapper input {
   display: none;
 }
 
-.best-sellers .item .products .heart input:checked~label img {
+.best-sellers .item .products .heart input:checked ~ label img {
   filter: invert(50%) sepia(100%) hue-rotate(1deg) brightness(100%) saturate(10);
 }
-
 
 .best-sellers .item .products .heart label {
   color: #0a0a0a;
 }
 
-.best-sellers .item .products .heart input:checked~label svg {
+.best-sellers .item .products .heart input:checked ~ label svg {
   color: #e60b0b;
 }
 
@@ -386,8 +396,8 @@ input {
 
 .best-sellers .item .products .color p {
   --discount: 3px;
-  padding: 3px calc(var(--discount)*2);
-  border-radius: calc(var(--discount)*2);
+  padding: 3px calc(var(--discount) * 2);
+  border-radius: calc(var(--discount) * 2);
   background-color: rgba(58, 94, 70, 1);
 
   --discount-weight: 300;
@@ -399,14 +409,11 @@ input {
   color: var(--discount-color);
 }
 
-
-
 .best-sellers .item .products picture img {
   width: 100%;
   height: auto;
   padding: 0 40px 50px 40px;
 }
-
 
 .best-sellers .item .name-price {
   display: flex;
@@ -448,12 +455,10 @@ input {
   padding-left: 10px;
 }
 
-
 .item .name-price img {
   background-color: var(--yellow-color);
   padding: 11px;
 }
-
 
 /* .best-sellers .b-btn a{
   text-align: center;
@@ -478,15 +483,17 @@ input {
   display: none;
 }
 
-
-.best-sellers input:checked~.other-products {
+.best-sellers input:checked ~ .other-products {
   margin-top: var(--section-distance);
   display: block;
 }
 
-
 footer {
-  background: linear-gradient(to right, var(--yellow-color) 35%, var(--green-color) 35%);
+  background: linear-gradient(
+    to right,
+    var(--yellow-color) 35%,
+    var(--green-color) 35%
+  );
 }
 
 .footer {
@@ -503,7 +510,6 @@ footer {
   /* border: 2px salmon solid; */
 }
 
-
 .footer .right {
   flex-grow: 1;
   padding: 78px 0 78px 90px;
@@ -515,7 +521,6 @@ footer {
   padding: 0;
   display: flex;
   gap: 48px;
-
 }
 
 .footer .right ul li {
@@ -560,17 +565,13 @@ footer {
   color: var(--white-color);
 }
 
-
-
 /* Greater than or equal to 1000px */
 @media (width >=1000px) {
-
   .hero {
     margin-top: 63px;
     justify-content: space-between;
     align-items: center;
     gap: 24px;
-
   }
 
   .hero .left {
@@ -594,7 +595,6 @@ footer {
     --sale-size: 25px;
     font-size: var(--sale-size);
     margin: 0 0 50px 0;
-
   }
 
   .hero .left .y-btn:hover a {
@@ -653,11 +653,9 @@ footer {
     flex-grow: 1;
   }
 
-
   .menubar * {
     display: none;
   }
-
 }
 
 /* Less than or equal to 700px */
@@ -674,7 +672,6 @@ footer {
     height: auto;
     /* border: 5px salmon solid; */
     margin: 0;
-
   }
 
   .hero .left p:nth-of-type(1) {
@@ -685,7 +682,7 @@ footer {
   .hero .left h2 {
     --header-size: 60px;
     font-size: var(--header-size);
-    line-height: calc(var(--one-hundred-percent)/2);
+    line-height: calc(var(--one-hundred-percent) / 2);
     letter-spacing: 13%;
   }
 
@@ -693,7 +690,6 @@ footer {
     --sale-size: 18px;
     font-size: var(--sale-size);
     margin: 0 0 24px 0;
-
   }
 
   .hero .left .y-btn a {
@@ -749,12 +745,12 @@ footer {
     margin-top: -22px;
     justify-content: space-between;
     padding: 12px;
-
   }
 
   .new-collection {
     --section-distance: 32px;
-    padding: 0 var(--mobile-padding) var(--section-distance-m) var(--mobile-padding);
+    padding: 0 var(--mobile-padding) var(--section-distance-m)
+      var(--mobile-padding);
   }
 
   .new-collection h3,
@@ -765,7 +761,6 @@ footer {
     font-size: var(--h3-size);
     line-height: var(--h3-height);
   }
-
 
   .new-collection .collection p {
     --jacket-size: 18px;
@@ -873,7 +868,6 @@ footer {
   .desktop {
     display: none;
   }
-
 }
 
 /* Between 700px and 1000px */
